--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,9 @@ plugins:
   - jemoji
   - jekyll-include-cache
 
+sidebar:
+  nav: "docs"
+
 # author:
 #   name   : "First Lastname"
 #   avatar : "/assets/images/bio-photo.jpg"
